# hplx

./: .gitignore  README.md  hpl-tuning.txt  pyproject.toml  requirements.txt  setup.cfg
src/hmxlabs/hplx/: __main__.py  hpl_input.py  hpl_results.py  hplx.py
tests/: test_hpl_input.py  test_hpl_results.py
tests/data/: HPL.csv  HPL.out
