[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmxlabs.hplx"
version = "1.0.0"
authors = [
  { name="HMx Labs", email="comms@hmxlabs.uk" }
]
description = "Package to get basic system information including CPU count, HT/SMT status, RAM and disk. Not doing anything special. Just uses psutil and py-cpuinfo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers"
]
dependencies = [
    "psutil ~= 5.9",
    "py-cpuinfo == 9.0.0"
]
[project.scripts]
sysinfo = "hplx:main"

[project.entry-points."hmxlabs.hplx"]
sysinfo = "hmxlabs.hplx.hplx:main"

[project.urls]
"Homepage" = "https://github.com/hmxlabs/hplx/"
"HMxLabs" = "http://hmxlabs.io"